# hotel-room-booking-service

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml  rust.yml
docs/: all.html  fn.monomorphized_function.html  index.html  sidebar-items.js
docs/storage/: fn.create.html  fn.fetch_all.html  fn.fetch_by_check_in_date.html  fn.fetch_by_customer_id.html  fn.fetch_by_id.html  fn.fetch_by_room_type_id.html  fn.load_snapshot.html  fn.save_snapshot.html  fn.snapshot_exists.html  fn.status.html  index.html  sidebar-items.js  static.BOOKING_LIST.html  static.SNAPSHOT_PATH.html
docs/storage/room_booking/: enum.BookingStatus.html  index.html  sidebar-items.js  struct.RoomBooking.html
src/: main.rs  storage.rs
src/storage/: room_booking.rs
